// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Body /> matches snapshot 1`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      fugiat error molestiae laborum est possimus assumenda
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 2`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      Itaque voluptas ea ducimus autem sit aspernatur. Quam elige...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 3`] = `
<div>
  <h4>
    officiis qui dignissimos dolore qui voluptatem cumque
  </h4>
  <div>
    <p>
      iste est unde rem similique et maxime
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 4`] = `
<div>
  <h4>
    possimus earum animi quis expedita et optio
  </h4>
  <div>
    <p>
      velit voluptate necessitatibus excepturi et qui sunt
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 5`] = `
<div>
  <h4>
    quia assumenda ut neque saepe est labore
  </h4>
  <div>
    <p>
      Ex architecto ut corrupti voluptatem. Dolores dolor volupta...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 6`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      Pariatur voluptates odio rem. Iure quia culpa suscipit tota...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 7`] = `
<div>
  <h4>
    commodi at impedit sint perferendis in dolorem
  </h4>
  <div>
    <p>
      Loading ...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 8`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      vero quia voluptatibus consequatur provident qui delectus
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 9`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      provident rerum necessitatibus blanditiis deserunt accusant...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 10`] = `
<div>
  <h4>
    facilis est laboriosam tempora aut cupiditate aut
  </h4>
  <div>
    <p>
      Loading ...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 11`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      eaque quis omnis ut praesentium vel earum
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 12`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      Voluptatem et autem doloremque earum cum. Perferendis id do...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 13`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      Loading ...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 14`] = `
<div>
  <h4>
    voluptas ullam animi excepturi laborum veniam asperiores
  </h4>
  <div>
    <p>
      consectetur animi non reiciendis iure laudantium est
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 15`] = `
<div>
  <h4>
    aut ab laborum sint qui id ipsa
  </h4>
  <div>
    <p>
      Loading ...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 16`] = `
<div>
  <h4>
    est et sapiente ipsa aut nostrum repudiandae
  </h4>
  <div>
    <p>
      neque ut dolores qui qui architecto aliquid
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 17`] = `
<div>
  <h4>
    voluptatum eligendi eos magni iste doloribus et
  </h4>
  <div>
    <p>
      adipisci saepe quam quia veritatis qui optio
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 18`] = `
<div>
  <h4>
    tenetur iure quos sed quibusdam voluptatem ducimus
  </h4>
  <div>
    <p>
      vel quia fugit totam quia esse quod
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 19`] = `
<div>
  <h4>
    reprehenderit deleniti nihil ex maiores nihil quisquam
  </h4>
  <div>
    <p>
      Rerum quos consequatur. Odio id id repellat maiores iure fu...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 20`] = `
<div>
  <h4>
    nihil illum ut nobis velit velit perspiciatis
  </h4>
  <div>
    <p>
      Aperiam qui voluptatem rerum et cumque quo. Aut dolore labo...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 21`] = `
<div>
  <h4>
    similique laboriosam molestiae modi expedita quaerat eos
  </h4>
  <div>
    <p>
      itaque ut quis incidunt provident assumenda sit
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 22`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      minima sunt deserunt sit aut et quis
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 23`] = `
<div>
  <h4>
    suscipit fuga non est suscipit dicta ipsum
  </h4>
  <div>
    <p>
      Quia fugiat ducimus quia sit eum possimus. Expedita volupta...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 24`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      iure modi quibusdam odit tempore praesentium quaerat
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 25`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      Loading ...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 26`] = `
<div>
  <h4>
    odit et est laudantium rerum quam eum
  </h4>
  <div>
    <p>
      Loading ...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 27`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      Loading ...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 28`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      vero mollitia tempore delectus eos sunt optio
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 29`] = `
<div>
  <h4>
    laborum voluptatem ut unde quidem molestias repudiandae
  </h4>
  <div>
    <p>
      Nostrum deserunt odit. Voluptates incidunt consequuntur qui...
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 30`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      et amet suscipit sed est corporis est
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 31`] = `
<div>
  <h4>
    Loading ...
  </h4>
  <div>
    <p>
      voluptate omnis ratione sed sit distinctio nobis
    </p>
  </div>
</div>
`;

exports[`<Body /> matches snapshot 32`] = `
<div>
  <h4>
    eum aliquam officiis consequatur est facilis illum
  </h4>
  <div>
    <p>
      Loading ...
    </p>
  </div>
</div>
`;
